2022-10-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (SeekBlob): Fix SEEK_END validation.  Addresses
	oss-fuzz 52133 "graphicsmagick:coder_ICB_fuzzer:
	Heap-buffer-overflow in ReadBlob".

2022-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* scripts/changelog2rst.sh: Try to deal with the crazy mix of
	spaces and hard tabs which are now appearing in the ChangeLog file.

2022-10-04    Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/tga.c Fixed oss-fuzz-52084.
	* PerlMagick/t/input.tga renamed to PerlMagick\t\input_8_CC.tga
	* PerlMagick/t/reference/read/input_tga_8_BW.miff New testcase.
	* PerlMagick/t/read.t: Added input_tga_8_BW.miff to PerlMagick test
	suite.


2022-10-03    Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/tga.c TGA footer is read, currently used for logs only.

2022-10-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* scripts/rst2html5.py: Fix from Mark Mitchell to deal with RST
	file local include statements when invoked from a different
	directory.  Also fix requested character set encoding.

2022-10-02 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* PerlMagick/t/input_8_BW_rle.tga
	* PerlMagick/t/input_8_CC_rle.tga
	* PerlMagick/t/input_8_BW.tga
	Added 8 bit TGA samples.

2022-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* scripts/rst2html5.py: Applied patch by Mark Mitchell which
	replaces rst2htmldeco.py with rst2html5.py. rst2html5.py does
	essentially the same job as rst2htmldeco.py, but in a different
	way.  docutils_htmldeco_writer.py is no longer used or needed.

	Also fixed thanks.rst file which had non-utf8 characters, as well
	as ChangeLog.2006, ChangeLog.2008 and ChangeLog.2012.

	* PerlMagick/t/read.t: Added input_mono.tga to PerlMagick test
	suite.

	* coders/tga.c: White-space normalization.  Eliminate compilation
	warning about unused indexes variable.

2022-10-01    Fojtik Jaroslav  <JaFojtik@yandex.com>
